# sensor-fusion-pipeline

./: .gitignore  CMakeLists.txt  Makefile  README.md  verify.sh
.claude/: launch.json
.github/workflows/: ci.yml
apps/: ekf_localization.cpp
benchmarks/: results.md
dashboard/: app.js  index.html  server.py  style.css
include/: benchmark.hpp  config.hpp  ekf.hpp  estimator.hpp  histogram.hpp  kalman.hpp  logger.hpp  matrix.hpp  messages.hpp  pipeline_config.hpp  platform.hpp  ring_buffer.hpp  sensor.hpp  stats.hpp
scripts/: fetch_kitti_oxts.py  plot_fusion.py  plot_latency.py  plot_trajectory.py
src/: main.cpp
tests/: test_ekf.cpp  test_estimator.cpp  test_histogram.cpp  test_kalman.cpp  test_logger.cpp  test_mpsc.cpp  test_ring_buffer.cpp  test_sensor.cpp  test_util.hpp
